# wave_vpi

./: .clang-fmt  .gitignore  .gitmodules  Cargo.toml  init.sh  rustfmt.toml  unit_test.sh  xmake.lua
example/: HitRateExample.lua  LuaMain.lua  custom.vcd  example.cc  run.sh  verilua_cfg.lua  verilua_cfg_unknown.lua
src/: lib.rs  main.cc  vpi_user.rs  wave_dpi.cc  wave_vpi.cc  wave_vpi.h
tests/: unit_test.cc
