[package]
name = "wave_vpi_wellen_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wellen = { path = "wellen/wellen" }
bytesize = "1.3.0"
indicatif = "0.17.8"
bytemuck = "1.16.0"
byteorder = "1.5.0"

[lib]
crate-type = ["cdylib"]
